Fix index page image gallery gap spacing

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -7,7 +7,7 @@ section.grid {
 
 section.gallery {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
 }
 
 section.hero {
